syntax = "proto3";
package authentication;

service AuthenticationService {
  rpc Login (LoginRequest) returns (UserResponse);
  rpc Register (RegisterRequest) returns (UserResponse);
}

message Empty {}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message UserResponse {
  int32 id = 1;
  string full_name = 2;
  string email = 3;
  string phone = 4;
  string role = 5;
  // repeated StaffScheduleResponse staff_schedules = 6;
  string status = 7;
}

message RegisterRequest {
  string full_name = 2;
  string email = 3;
  string phone = 4;
  string password = 6;
}
